starting the validation form

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         Add your email below to stay up-to-date with announcements and our launch deals.
       </p>
 
-      <form action="">
-        <input type="email" name="email" id="email" placeholder="Email Address" required>
+      <form action="" class="form">
+        <input type="text" name="email" id="email" placeholder="Email Address">
         <img src="./images/icon-error.svg" alt="icon-error" class="icon-error">
         <button type="submit" class="btn">
           <img src="./images/icon-arrow.svg" alt="icon-arrow">
